--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "axios": "^0.21.1",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.0.8",
     "vue3-googl-chart": "^0.0.1",
