--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-1",
     "@popperjs/core": "^2.9.2",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
+    "html2canvas": "^1.3.2",
     "vue": "^3.0.0",
-    "axios": "^0.21.1",
+    "vue-html2canvas": "0.0.4",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.0.8",
     "vue3-googl-chart": "^0.0.1",
